--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.15.2",
     "express-session": "^1.15.2",
     "mongoose": "^4.9.4",
+    "multer": "^1.3.0",
     "pug": "^2.0.0-beta11"
   }
 }
